[gd_scene load_steps=3 format=3 uid="uid://cj7710d2bm8s8"]

[ext_resource type="Script" uid="uid://cxrlikahoxe6e" path="res://scripts/registrar.gd" id="1_8v806"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8v806"]
bg_color = Color(0, 0.416213, 0.138102, 1)

[node name="Registro" type="Control"]
show_behind_parent = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 19.0
offset_right = 1144.0
offset_bottom = 650.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(200, 0)
layout_direction = 1
layout_mode = 2
theme_override_constants/separation = 20

[node name="StatusLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Username"

[node name="TextEdit" type="LineEdit" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Password"

[node name="TextEdit2" type="LineEdit" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Submit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_8v806")
text = "Registrar"
script = ExtResource("1_8v806")
